; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fts1.c_mergePosList.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fts1.c_mergePosList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@DL_POSITIONS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, %struct.TYPE_5__*)* @mergePosList to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mergePosList(i32* %0, i32* %1, i32 %2, %struct.TYPE_5__* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %8, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @readPosition(i32* %14, i32* %9)
  store i32 %15, i32* %10, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @readPosition(i32* %16, i32* %11)
  store i32 %17, i32* %12, align 4
  store i32 0, i32* %13, align 4
  br label %18

18:                                               ; preds = %78, %4
  %19 = load i32, i32* %10, align 4
  %20 = icmp ne i32 %19, -1
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i32, i32* %12, align 4
  %23 = icmp ne i32 %22, -1
  br label %24

24:                                               ; preds = %21, %18
  %25 = phi i1 [ false, %18 ], [ %23, %21 ]
  br i1 %25, label %26, label %79

26:                                               ; preds = %24
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %11, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %58

30:                                               ; preds = %26
  %31 = load i32, i32* %10, align 4
  %32 = add nsw i32 %31, 1
  %33 = load i32, i32* %12, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %35, label %58

35:                                               ; preds = %30
  %36 = load i32, i32* %13, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %42, label %38

38:                                               ; preds = %35
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @docListAddDocid(%struct.TYPE_5__* %39, i32 %40)
  store i32 1, i32* %13, align 4
  br label %42

42:                                               ; preds = %38, %35
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load i64, i64* @DL_POSITIONS, align 8
  %47 = icmp sge i64 %45, %46
  br i1 %47, label %48, label %53

48:                                               ; preds = %42
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %50 = load i32, i32* %11, align 4
  %51 = load i32, i32* %12, align 4
  %52 = call i32 @docListAddPos(%struct.TYPE_5__* %49, i32 %50, i32 %51)
  br label %53

53:                                               ; preds = %48, %42
  %54 = load i32*, i32** %5, align 8
  %55 = call i32 @readPosition(i32* %54, i32* %9)
  store i32 %55, i32* %10, align 4
  %56 = load i32*, i32** %6, align 8
  %57 = call i32 @readPosition(i32* %56, i32* %11)
  store i32 %57, i32* %12, align 4
  br label %78

58:                                               ; preds = %30, %26
  %59 = load i32, i32* %11, align 4
  %60 = load i32, i32* %9, align 4
  %61 = icmp slt i32 %59, %60
  br i1 %61, label %71, label %62

62:                                               ; preds = %58
  %63 = load i32, i32* %11, align 4
  %64 = load i32, i32* %9, align 4
  %65 = icmp eq i32 %63, %64
  br i1 %65, label %66, label %74

66:                                               ; preds = %62
  %67 = load i32, i32* %12, align 4
  %68 = load i32, i32* %10, align 4
  %69 = add nsw i32 %68, 1
  %70 = icmp slt i32 %67, %69
  br i1 %70, label %71, label %74

71:                                               ; preds = %66, %58
  %72 = load i32*, i32** %6, align 8
  %73 = call i32 @readPosition(i32* %72, i32* %11)
  store i32 %73, i32* %12, align 4
  br label %77

74:                                               ; preds = %66, %62
  %75 = load i32*, i32** %5, align 8
  %76 = call i32 @readPosition(i32* %75, i32* %9)
  store i32 %76, i32* %10, align 4
  br label %77

77:                                               ; preds = %74, %71
  br label %78

78:                                               ; preds = %77, %53
  br label %18

79:                                               ; preds = %24
  %80 = load i32, i32* %10, align 4
  %81 = icmp sge i32 %80, 0
  br i1 %81, label %82, label %85

82:                                               ; preds = %79
  %83 = load i32*, i32** %5, align 8
  %84 = call i32 @skipPositionList(i32* %83)
  br label %85

85:                                               ; preds = %82, %79
  %86 = load i32, i32* %12, align 4
  %87 = icmp sge i32 %86, 0
  br i1 %87, label %88, label %91

88:                                               ; preds = %85
  %89 = load i32*, i32** %6, align 8
  %90 = call i32 @skipPositionList(i32* %89)
  br label %91

91:                                               ; preds = %88, %85
  ret void
}

declare dso_local i32 @readPosition(i32*, i32*) #1

declare dso_local i32 @docListAddDocid(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @docListAddPos(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @skipPositionList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
